--- a/article1.html
+++ b/article1.html
@@ -41,7 +41,7 @@
                 <li>встраивать медиа: размещать на сайте изображения, аудио, видео, карты;</li>
                 <li>создавать ссылки и навигацию;</li>
                 <li>создавать таблицы;</li>
-                <li>создавать формы.</li>
+                <li>создавать формы</li>
             </ul>
         </section>
     </main>
