--- a/article3.html
+++ b/article3.html
@@ -25,8 +25,9 @@
     <main>
         <section class="content">
             <h2>
-                Стили для текса
+                Определение структуры сайта
             </h2>
+            <p><b>Структура сайта</b>– это иерархическая структура его страниц и взаимосвязь между ними. Если они правильно расположены, поисковым роботам будет удобно находить нужную информацию, а посетителям – перемещаться между разными разделами.</p>
         </section>
     </main>
     <footer>
