--- a/article4.html
+++ b/article4.html
@@ -27,6 +27,22 @@
             <h2>
                 Современные браузеры
             </h2>
+            <ol class="list_4">
+                <li class="list_2">Яндекс Браузер</li>
+                    <p class="list">
+                    Яндекс Браузер является разработкой команды одноименного поисковика. В основе его лежит ядро Chromium, заточенное под использование сервисов бренда. Обладает одной из самых быстрых загрузок страниц для операционных систем Windows 10 и 11.С недавнего времени получил встроенный искусственный интеллект в виде помощника Алисы. С ее помощью можно генерировать тексты, узнавать информацию о погоде, искать музыку и играть. Интеграция с YandexGPT и YandexART поможет пользователям улучшать их тексты
+                    </p>
+                <li class="list_2">Opera GX</li>
+                    <p class="list">Opera — Опера стала легендарным браузером со встроенным программным обеспечением для решения ряда задач. Проводник отличается гибкостью настроек, возможностью кастомизации меню под себя. Именно в Opera была впервые реализована ускоренная загрузка. Благодаря ей объем данных сжимается до 75%. Это приводит к экономии трафика и ускорению загрузки страниц.</p>
+                <li class="list_2">Chrome</li>
+                    <p class="list">Chrome — это лидер для Windows и Android. Напомним, что это первый проводник, получивший интегрированный поисковик в адресную строку. Хорошо откалиброваны и технологии распознавания голоса. С их помощью можно не пользоваться рукописным вводом. В середине марта 2024 разработчики представили обновленную систему защиты от фишинга. Она существенно повысит безопасность пользователей при посещении потенциально опасных сайтов</p>
+                <li class="list_2"><del>Mozila</del> Firefox</li>
+                    <p class="list">Легендарная «Огненная лиса» остается актуальной до сих пор. Частенько ее используют программисты для разработки собственного программного обеспечения. Главным преимуществом браузера является великолепная совместимость с расширениями от Яндекса и Хрома. Требует некоторого привыкания к себе и может показаться сложным из-за изобилия опций.</p> 
+                <li class="list_2">Edge</li>
+                    <p class="list">Из-за своей сырости и надоедливости Microsoft Edge не пользуется большой популярностью среди пользователей. Разработчики Майкрософт решили исправить положение дел. В отличие от предшественника, проводник характеризуется ускоренной загрузкой веб-страниц и минималистичным дизайном. Данный обозреватель заточен под офисную работу. В него интегрировали функции создания комментариев и заметок в удобном пользователю формате. Дополнительно можно произвести импорт данных браузера в Microsoft One Note.</p>           
+
+                
+            </ol>
         </section>
     </main>
     <footer>
