--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <ol class="list">
                 <li><a href="article1.html">Что такое HTML?</a></li>
                 <li><a href="article2.html">ТОП 5 редакторов кода</a></li>
-                <li><a href="article3.html">Стили для текса</a></li>
+                <li><a href="article3.html">Определение структуры сайта</a></li>
                 <li><a href="article4.html">Современные браузеры</a></li>
                 <li><a href="article5.html">Список терминов</a></li>
             </ol>
