--- a/article2.html
+++ b/article2.html
@@ -33,12 +33,55 @@
                         Visual Studio Code, также известный как VS Code, представляет собой редактор кода с открытым исходным кодом от Microsoft с поддержкой ОС Windows, Mac и Linux. Это мощное программное обеспечение для редактирования кода, предоставляющее расширение, которое дополнительно помогает в программировании. VS Code поддерживает популярные языки программирования, такие как C , C ++, HTML, CSS, JAVA, Python и многое другое.
                     </p>
                     <p>Характеристики</p>
-                    <ul class="list">
-                        <li>Использует меньше оперативной памяти.</li>
+                    <ul class="list" type="disc">
+                        <li>Использует меньше оперативной памяти</li>
                         <li>Функция, известная как IntelliSense, которая означает подсветку синтаксиса и автозаполнение</li>
                         <li>Простая отладка с помощью контрольных точек</li>
                     </ul>
-                
+                <li class="list_2">Atom</li>
+                    <p>
+                        Atom - это редактор кода с открытым исходным кодом, разработанный самим Github и пользующийся огромной поддержкой сообщества. Он также поддерживает все популярные ОС, такие как Windows, Mac и Linux.
+                    </p>
+                    <p>Характеристики</p>
+                    <ul class="list" type="disc">
+                        <li>Интеллектуальное автозаполнение</li>
+                        <li>Браузер файловой системы</li>
+                        <li>Кроссплатформенное редактирование</li>
+                        <li>Поддерживает несколько панелей для сравнения</li>
+                        <li>Встроенный менеджер пакетов</li>
+                    </ul>
+                <li class="list_2">Sublime Text</li>
+                    <p>
+                        Sublime Text Editor - это известное кроссплатформенное программное обеспечение для редактирования кода с поддержкой программирования на нескольких языках с помощью подключаемых модулей. Оно доступно также для Windows, Mac и Linux.
+                    </p>
+                    <p>Характеристики</p>
+                    <ul class="list" type="disc">
+                        <li>Одновременное редактирование – внесение изменений в несколько частей исходного кода</li>
+                        <li>Быстрая навигация к файлам и строкам</li>
+                        <li>Палитра команд</li>
+                    </ul>
+                <li class="list_2">Brackets</li>
+                    <p>
+                        Brackets - это проект с открытым исходным кодом и отличный редактор для веб-разработчиков. У него отличное сообщество, и он поддерживает Windows, Linux и Mac. Если вы ищете редактор кода для своей веб-разработки, то brackets - это то, что вам нужно.
+                    </p>
+                    <p>Характеристики</p>
+                    <ul class="list" type="disc">
+                        <li>Он легкий</li>
+                        <li>Поддержка предварительного просмотра в реальном времени, отличная помощь при разработке веб-приложений</li>
+                        <li>Поддержка препроцессора упрощает работу с Sass и менее</li>
+                        <li>Встроенный редактор</li>
+                    </ul>
+                <li class="list_2">Notepad ++</li>
+                    <p>
+                        Notepad ++ - это очень легкое программное обеспечение для редактирования кода. Если вы хотите сэкономить ресурсы компьютера для редакторов кода, требующих оперативной памяти, то обязательно попробуйте Notepad ++. Он поддерживает Windows и Linux.
+                    </p>
+                    <p>Характеристики</p>
+                    <ul class="list" type="disc">
+                        <li>Подсветка синтаксиса</li>
+                        <li>Множество возможностей настройки</li>
+                        <li>Автоматическое завершение</li>
+                        <li>Поддержка нескольких вкладок и размер файла около 4 МБ</li>
+                    </ul>                        
             </ol>
         </section>
     </main>
